--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,18 +11,27 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - name: Set up Python 3.10
               uses: actions/setup-python@v4
               with:
                   python-version: "3.10"
+
+            - name: Create and activate virtual environment
+              run: |
+                  python -m venv venv
+                  source venv/bin/activate
+
             - name: Install dependencies
               run: |
                   pip install --upgrade pip
                   pip install -r requirements.txt
+
             - name: Lint with Flake8
               run: |
                   pip install flake8
                   flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
             - name: Test with pytest
               run: |
                   pip install pytest
@@ -33,11 +42,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - name: Log in to Docker Hub
               uses: docker/login-action@v2
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
+
             - name: Build and push Docker image
               uses: docker/build-push-action@v3
               with:
